syntax="proto3";

package proto;
option go_package = "./;proto";

import "mom_common.proto";
import "production_line.proto";
import "production_process.proto";
import "product_order.proto";
import "production_process_step.proto";

service ProductTestRecord{
    rpc Add(ProductTestRecordInfo)returns(CommonResponse){}
}

message ProductTestRecordInfo {
	//ID 
 	string id=1;
	//测试工站ID 
    string productionStationID=2;
    ProductionStationInfo productionStation=3;
	//生产工序ID 
    string productionProcessID=4;
    ProductionProcessInfo productionProcess=5;
	//产品信息ID 
    string productInfoID=6;
    ProductInfoInfo productInfo=7;
	//测试项目ID 
    string productionProcessStepID=8;
    ProductionProcessStepInfo productionProcessStep=9;
	//开始测试时间 
 	string testStartTime=10;
	//结束测试时间 
 	string testEndTime=11;
	//耗时(秒) 
 	int32 duration=12;
	//测试数据 
 	string testData=13;
	//是否合格 
 	bool isQualified=14;
	//测试人员ID 
    string testUserID=15;
	//复核人员ID 
    string checkUserID=16;
	//备注 
 	string remark=17;
    //测试结论
    repeated ProductTestConclusionInfo productTestConclusions=18;
}

message ProductTestConclusionInfo{
    string id=1;
    string productTestRecordID=2;
    ProductTestRecordInfo productTestRecord=3;
}

message QueryProductTestRecordRequest{
    // @inject_tag: uri:"pageIndex" form:"pageIndex"
    int64 pageIndex=1;
    // @inject_tag: uri:"pageSize" form:"pageSize"
    int64 pageSize=2;
    // @inject_tag: uri:"sortConfig" form:"sortConfig"
    string sortConfig=3;
	// @inject_tag: uri:"productOrderNo" form:"productOrderNo"
	string productOrderNo=4;
	// @inject_tag: uri:"productSerialNo" form:"productSerialNo"
	string productSerialNo=5;
	// @inject_tag: uri:"testStartTime0" form:"testStartTime0"
	string testStartTime0=6;
	// @inject_tag: uri:"testStartTime1" form:"testStartTime1"
	string testStartTime1=7;
	// @inject_tag: uri:"productionLineID" form:"productionLineID"
	string productionLineID=8;
}

message QueryProductTestRecordResponse{
    Code code=1;
    string message=2;
    repeated ProductTestRecordInfo data=3;
    int64 pages=4;
    int64 records=5;
    int64 total=6;
}

message GetAllProductTestRecordResponse{
    Code code=1;
    string message=2;
    repeated ProductTestRecordInfo data=3;
}

message GetProductTestRecordDetailResponse{
    Code code=1;
    string message=2;
    ProductTestRecordInfo data=3;
}